# wei_template_workcell

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-jupyter  HOW-TO.md  Makefile  README.md  compose.yaml  docker-compose.yml  example.env  example_workcell.yaml  example_workcell_docker.yaml  wei.compose.yaml
.github/: README_STD.md
.github/workflows/: create.yml  create_project.sh
applications/example_app/: README.md
applications/example_app/src/: example_app.py
applications/example_app/workflows/: example.workflow.yaml  example_workflow.yaml
docker/: dashboard.compose.yaml  wei.compose.yaml
example_app/: Dockerfile  Makefile  README.md  example_app.ipynb  example_app.py  pyproject.toml
example_app/workflows/: example_workflow.yaml
make/: config.mk  docker.mk
scripts/: build.sh  register_diaspora.sh  run_example_app.sh  run_examples.sh  script_helper.sh  start.sh  start_detached.sh  stop.sh  stream_logs.sh  view_logs.sh
workcell_defs/: example_workcell.yaml
workcells/: example.workcell.yaml
